# vocal-mind

./: .gitignore
.github/workflows/: ci.yml  diarization_ci.yml  emotion_ci.yml  rag_ci.yml
Experiments/Automatic-Speech-Recognition/: automatic-speech-recognition.ipynb
Experiments/Emotion-Recognition/: emotion_exp1.ipynb
Experiments/Rag/: README.md  debug_llms.py  debug_ragas.py  debug_ragas_groq.py  docker-compose.yml  inspect_data.py  pyproject.toml  run_ragas.py
Experiments/Rag/rag_app/: __init__.py  config.py  main.py  pipeline.py  query_engine.py
Experiments/Rag/rag_app/evaluation/: __init__.py  custom_evaluator.py  models.py  ragas_evaluator.py
Experiments/Rag/rag_app/ingestion/: __init__.py  herb.py  loaders.py  standard.py
Experiments/Rag/reports/: ragas_report_20260129_195256.json  ragas_report_20260129_202538.json  ragas_report_20260129_212318.json
Experiments/Rag/tests/: conftest.py  test_ingestion_strategies.py  test_loaders.py
Experiments/Speaker-Diarization/: speaker diarization.ipynb
Experiments/Speech-Pipeline-Tests/: PIPELINE_TEST_REPORT.md  inference_pipeline_simple.py  inference_pipeline_v2.py  (+1 more)
backend/: .gitignore  README.md  main.py  openapi.json  pyproject.toml
backend/apps/asr/: __init__.py  engine.py  models.py  router.py
backend/apps/core/: config.py  database.py
backend/apps/diarization/: __init__.py  engine.py  models.py  router.py
backend/apps/emotion/: __init__.py  engine.py  models.py  router.py
backend/apps/rag/: engine.py  models.py  pipeline.py  router.py
backend/apps/rag/ingestion/: __init__.py  base.py  herb.py  loaders.py  standard.py
backend/apps/rag/tests/: conftest.py  test_api.py  test_ingestion_strategies.py  test_loaders.py
backend/scripts/: extract_openapi.py
frontend/: package-lock.json  package.json
(+2 files in other folders)
