[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "llama-index>=0.12.0",
    "llama-index-llms-groq>=0.3.0",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-vector-stores-pinecone>=0.4.0",
    "pinecone>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "datasets>=2.19.0",
]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "ruff>=0.14.14",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
